resources/css/oc.css
/* ... */
.underline {
  text-decoration: underline;
}

a.post-block-link {
  display: inline;
}

p.digest-post-footer-row {
  width: 100%;
  max-width: 508px;
  height: 24px;
  text-align: left;
  color: rgb(52, 65, 79, 0.5);
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  vertical-align: middle;
}

p.digest-post-footer-row span.comments-label, p.digest-post-footer-row span.new-comments {
  color: #6833F1;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  line-height: 18px;
  font-weight: bold;
  margin-right: 4px;
  text-align: left;
  cursor: pointer;
}

div.digest-post-headline-row {
  display: flex;
  width: 100%;
  max-width: 508px;
  /*height: 56px;*/
  flex-flow: row nowrap;
  justify-content: flex-start;
  align-items: center;
  margin-top: auto;
  margin-bottom: auto;
}

div.digest-post-headline-row.has-comments {
  height: 32px;
}

div.digest-post-headline-row span.digest-post-arrow {
  margin: 0 6px;
  text-align: center;
  color: #34414f;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  text-decoration: none !important;
}

a:hover div.digest-post-headline-row span.digest-post-arrow {
  text-decoration: none !important;
}

div.digest-post-headline-row span.digest-post-attribution {
  flex: 0 0 auto;
  /*max-width: 30%;*/
  /*overflow: hidden;
  text-overflow: ellipsis;*/
  font-size: 12px;
  color: rgb(52, 65, 79, 0.5);
  text-decoration: underline;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  text-align: left;
  /*display: block;*/
  white-space: nowrap;
}

div.digest-post-headline-row span.digest-post-title a {
  flex: 0 1 auto;
  margin-right: auto;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  color: #34414f;
  text-decoration: underline;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  text-align: left;
  display: inline-block;
  white-space: nowrap;
}

h2.digest-post-title {
  font-size: 16px;
  line-height: 20px;
  color: #34414f;
  text-decoration: underline;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  text-align: left;
}

p {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  color: #34414F;
  line-height: 1.5;
  margin: 0px;
  text-align: center;
}

pre {
  font-family: monospace !important;
  font-size: 14px;
  color: #34414F;
  padding: 4px;
  border-radius: 6px;
  background-color: rgba(36, 45, 66, 0.08);
  text-align: left;
}

p.board-name {
  color: #888D94;
  font-size: 18px;
  font-family: Helvetica, Arial, sans-serif !important;
  letter-spacing: 0;
  line-height: 22px;
}

p.attribution {
  font-size: 12px;
  line-height: 14px;
  color: #888D94;
  text-align: left;
}

p.attribution label.new-comments {
  color: #6833F1;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  font-weight: bold;
}

span.note-body {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
}

span.button-text {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: bold;
  padding-top: 13px;
}

table.cta-button span.button-text {
  color: white;
}

table.post-button span.button-text {
  color: #6833F1;
}

table.footer p {
  color: #C4C6C9;
  font-size: 14px;
}

table.footer a {
  font-weight: bold;
  color: #6833F1;
}

center > table.header-table {
  border-bottom: 1px solid rgba(36, 45, 66, 0.1);
}

.header-table {
  background-color: white !important;
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

div.digest-date {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  color: rgba(52, 65, 79, 0.5);
  text-align: right;
  margin-top: 8px;
  line-height: 17px;
}

center > table.footer-table {
  border-top: 1px solid rgba(36, 45, 66, 0.1);
}

.footer-table {
  background-color: white !important;
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

.footer-table.digest-footer-table {
  border-top: 1px solid rgba(36, 45, 66, 0.1);
}

.email-content {
  max-width: 564px;
  width: 100%;
  background-color: white !important;
  text-align: center;
  vertical-align: middle;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.follow-up-email-content {
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
  border-top: 1px solid rgba(36, 45, 66, 0.1);
  border-bottom: 1px solid rgba(36, 45, 66, 0.1);
}

.follow-up-email-content a.follow-up-button-cta {
  width: 120px;
  display: block;
  font-size: 14px;
  font-weight: bold;
  color: white;
  background-color: #52C489;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px 11px 0px;
  margin: 0 auto;
}

.follow-up-post-block {
  background-color: #ececec;
  padding: 24px 24px 24px 24px;
  max-width: 440px;
  border-radius: 6px;
  text-align: left;
  margin: 0 auto;
  display: grid;
}

.follow-up-post-block h2 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  color: #34414f;
  font-weight: normal;
  line-height: 18px;
  text-align: left;
}

.follow-up-post-block h2 span.post-title {
  color: #34414f;
  text-decoration: underline;
  text-align: left;
}

.follow-up-post-block .attribution {
  text-align: left;
}

img.follow-up-author {
  text-align: center;
  margin: 0 auto;
  vertical-align: middle;
  width: 40px;
  height: 40px;
}

img.reminder-author {
  text-align: center;
  margin: 0 auto;
  vertical-align: middle;
  width: 80px;
  height: 80px; 
}

h1.follow-up-header {
  text-align: center;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  font-size: 20px;
  line-height: 24px;
  color: #34414f;
}

h1.invite-header {
  text-align: center;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  font-size: 20px;
  line-height: 24px;
  color: #34414f;
  text-align: center;
}
/* ... */

